--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.21",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.5.6"
